Fix grid column can't be right align

--- a/customer-portal-frontend/src/styles-custom.scss
+++ b/customer-portal-frontend/src/styles-custom.scss
@@ -182,4 +182,7 @@
     height: 40px;
 }
 
+.e-rightalign {
+    text-align: right;
+}
 // ----- Syncfusion customization - end ----- //
